examples/test/testpolicy16787.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16787
  namespace: namespace477
spec:
  podSelector:
    matchLabels:
      key7: value8
      key17: value25
      key37: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value35
          key15: value22
          key47: value33
